--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -10,7 +10,6 @@
   "admin": {
     "dashboard_title": "لوحة التحكم"
   },
-
   "settings": {
     "title": "الإعدادات",
     "logout": "تسجيل الخروج",
@@ -21,8 +20,6 @@
     "language_changed": "تم تغيير اللغة بنجاح",
     "theme_changed": "تم تغيير السمة بنجاح"
   },
-
-  
   "auth": {
     "login": "تسجيل الدخول",
     "login_subtitle": "يرجى ملء التفاصيل للمتابعة",
@@ -100,7 +97,6 @@
         "not_match": "كلمات المرور غير متطابقة"
       }
     },
-
     "messages": {
       "checking_availability": "جاري التحقق من التوفر...",
       "email_registered": "هذا البريد الإلكتروني مسجل بالفعل",
@@ -133,7 +129,6 @@
       "invalid_code": "رمز التحقق غير صحيح",
       "verification_error": "فشل التحقق من الرمز: {error}",
       "google_signin": "جاري تسجيل الدخول باستخدام Google...",
-
       "google_signin_failed": "فشل تسجيل الدخول باستخدام Google",
       "google_signin_error": "فشل تسجيل الدخول باستخدام Google: {error}",
       "reset_password_sending": "جاري إرسال بريد إعادة تعيين كلمة المرور...",
@@ -157,9 +152,8 @@
     "privacy_policy": "سياسة الخصوصية",
     "about_us": "معلومات عنا",
     "logout": "تسجيل الخروج"
-
   },
-  "changepass_screen":{
+  "changepass_screen": {
     "change_password": "تغيير كلمة المرور",
     "current_password": "كلمة المرور الحالية",
     "enter_current_password": "أدخل كلمة المرور الحالية",
@@ -169,51 +163,61 @@
     "password_min_length": "يجب أن تكون كلمة المرور 6 أحرف على الأقل",
     "passwords_do_not_match": "كلمات المرور غير متطابقة",
     "is_required": "مطلوب",
-     "password_updated_success": "تم تحديث كلمة المرور بنجاح!"
-  }, 
-    "privacy": {
-      
-        "title": "سياسة الخصوصية",
-        "content": "مرحبًا بك في Eventure، التطبيق المخصص لاكتشاف وإدارة الفعاليات بسهولة. خصوصيتك مهمة بالنسبة لنا، وتوضح هذه السياسة كيف نقوم بجمع واستخدام وحماية بياناتك.\n\n1. المعلومات التي نقوم بجمعها\n- التفاصيل الشخصية (الاسم، البريد الإلكتروني، رقم الهاتف) عند التسجيل.\n- الفعاليات التي تحفظها أو تحجزها أو تضعها في المفضلة.\n- تفضيلات الفعاليات والتفاعلات المستندة إلى التقويم.\n- معلومات الملف الشخصي، بما في ذلك البيانات المعدلة والصور التي تم تحميلها.\n- بيانات الجهاز والاستخدام لتحسين تجربتك.\n\n2. كيف نستخدم معلوماتك\n- لتخصيص توصيات الفعاليات لك.\n- لتمكين حجز الفعاليات وحفظها واستخدام التصفية المستندة إلى التقويم.\n- لإرسال إشعارات حول الفعاليات الجديدة والمقبلة.\n- لتحسين وظائف التطبيق بناءً على تفاعلات المستخدم.\n\n3. مشاركة معلوماتك\n- نحن لا نبيع بياناتك الشخصية لأطراف ثالثة.\n- قد نشارك بيانات مجهولة المصدر مع شركاء موثوقين لتحسين خدماتنا.\n\n4. تدابير الأمان\n- نقوم بتنفيذ التشفير والتخزين الآمن لحماية بياناتك.\n- لا يمكن الوصول إلى المعلومات الحساسة إلا من قبل الموظفين المخولين فقط.\n\nباستخدامك لتطبيق Eventure، فإنك توافق على سياسة الخصوصية هذه. إذا كانت لديك أي مخاوف أو أسئلة، يرجى الاتصال بفريق الدعم لدينا."
-      
-    }, 
-    
-      "about": {
-       
-          "title": "من نحن",
-          "content": "إيفنتشر هو تطبيقك المثالي لاكتشاف وإدارة الفعاليات. سواء كنت تبحث عن فعاليات مثيرة، أو ترغب في حفظ مفضلاتك، أو حجز تجربتك القادمة، فإن إيفنتشر يجعل الأمر سهلاً. مع تصفية الفعاليات حسب التقويم، والإشعارات الفورية، والملف الشخصي المخصص، نضمن لك ألا تفوت أي شيء مهم بالنسبة لك. تصفح، احفظ، واستمتع بالفعاليات مع إيفنتشر – بوابتك إلى تجارب لا تُنسى.",
-           "name": "إيفنتشر"
-        },
-        
-          "profile": {
-            "title": "الملف الشخصي",
-            "edit": "تعديل الملف الشخصي",  
-              "saved_events": "الفعاليات المحفوظة",
-              "my_data": "بياناتي",
-              "full_name": "اسمك",
-              "email": "بريدك الإلكتروني",
-              "phone": "رقم هاتفك",
-              "camera": "الكاميرا",
-              "gallery": "المعرض",
-              "remove": "إزالة"
-            },
-            "messages": {
-              "user_data_not_found": "لم يتم العثور على بيانات المستخدم",
-              "n_a": "غير موجود",
-              "image_uploaded": "تم تحميل الصورة بنجاح",
-              "image_removed": "تمت إزالة الصورة بنجاح",
-              "edited_successfully": "تم التعديل بنجاح!"
-            }
-          
-        
-        
-      
-    
-    
-      
-    
-    
-  
-  
- 
+    "password_updated_success": "تم تحديث كلمة المرور بنجاح!"
+  },
+  "privacy": {
+    "title": "سياسة الخصوصية",
+    "content": "مرحبًا بك في Eventure، التطبيق المخصص لاكتشاف وإدارة الفعاليات بسهولة. خصوصيتك مهمة بالنسبة لنا، وتوضح هذه السياسة كيف نقوم بجمع واستخدام وحماية بياناتك.\n\n1. المعلومات التي نقوم بجمعها\n- التفاصيل الشخصية (الاسم، البريد الإلكتروني، رقم الهاتف) عند التسجيل.\n- الفعاليات التي تحفظها أو تحجزها أو تضعها في المفضلة.\n- تفضيلات الفعاليات والتفاعلات المستندة إلى التقويم.\n- معلومات الملف الشخصي، بما في ذلك البيانات المعدلة والصور التي تم تحميلها.\n- بيانات الجهاز والاستخدام لتحسين تجربتك.\n\n2. كيف نستخدم معلوماتك\n- لتخصيص توصيات الفعاليات لك.\n- لتمكين حجز الفعاليات وحفظها واستخدام التصفية المستندة إلى التقويم.\n- لإرسال إشعارات حول الفعاليات الجديدة والمقبلة.\n- لتحسين وظائف التطبيق بناءً على تفاعلات المستخدم.\n\n3. مشاركة معلوماتك\n- نحن لا نبيع بياناتك الشخصية لأطراف ثالثة.\n- قد نشارك بيانات مجهولة المصدر مع شركاء موثوقين لتحسين خدماتنا.\n\n4. تدابير الأمان\n- نقوم بتنفيذ التشفير والتخزين الآمن لحماية بياناتك.\n- لا يمكن الوصول إلى المعلومات الحساسة إلا من قبل الموظفين المخولين فقط.\n\nباستخدامك لتطبيق Eventure، فإنك توافق على سياسة الخصوصية هذه. إذا كانت لديك أي مخاوف أو أسئلة، يرجى الاتصال بفريق الدعم لدينا."
+  },
+  "about": {
+    "title": "من نحن",
+    "content": "إيفنتشر هو تطبيقك المثالي لاكتشاف وإدارة الفعاليات. سواء كنت تبحث عن فعاليات مثيرة، أو ترغب في حفظ مفضلاتك، أو حجز تجربتك القادمة، فإن إيفنتشر يجعل الأمر سهلاً. مع تصفية الفعاليات حسب التقويم، والإشعارات الفورية، والملف الشخصي المخصص، نضمن لك ألا تفوت أي شيء مهم بالنسبة لك. تصفح، احفظ، واستمتع بالفعاليات مع إيفنتشر – بوابتك إلى تجارب لا تُنسى.",
+    "name": "إيفنتشر"
+  },
+  "profile": {
+    "title": "الملف الشخصي",
+    "edit": "تعديل الملف الشخصي",
+    "saved_events": "الفعاليات المحفوظة",
+    "my_data": "بياناتي",
+    "full_name": "اسمك",
+    "email": "بريدك الإلكتروني",
+    "phone": "رقم هاتفك",
+    "camera": "الكاميرا",
+    "gallery": "المعرض",
+    "remove": "إزالة"
+  },
+  "messages": {
+    "user_data_not_found": "لم يتم العثور على بيانات المستخدم",
+    "n_a": "غير موجود",
+    "image_uploaded": "تم تحميل الصورة بنجاح",
+    "image_removed": "تمت إزالة الصورة بنجاح",
+    "edited_successfully": "تم التعديل بنجاح!"
+  },
+  "events": {
+    "no_events": "لا يوجد فعاليات",
+    "favorites": "المفضلة",
+    "fav_list_empty": "قائمة المفضلة الخاصة بك فارغة",
+    "error_with_state": "حدث خطأ في:",
+    "notifications": "الإشعارات",
+    "error": "خطأ",
+    "notification_settings": "إعدادات الإشعارات",
+    "error_loading_settings": "حدث خطأ في تحميل الإعدادات",
+    "retry": "حاول",
+    "schedule": "جدول المواعيد",
+    "cancel": "الغاء",
+    "book": "حجز",
+    "full": "ممتلأ",
+    "available_seats_completed": "كل الأماكن محجوزة",
+    "gmaps_error": "لا يمكن تحميل خرائط جوجل",
+    "no_participates": "لا يوجد مشتركين بعد",
+    "event_removed": "تم الحذف من قائمةالمحفوطات",
+    "event_added": "تم الإضافة إلى قائمة المحفوظات",
+    "hello": "مرحباً",
+    "show_all_notifications": "عرض كل الإشعارات",
+    "booked_events_reminder": "تذكير بالفعاليات المحفوظة",
+    "favorite_events_reminder": "تذكير بالفعاليات المفضلة",
+    "calendar": "CALENDAR",
+    "theme": "المظهر",
+    "language": "اللغة"
+  }
 }
