--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -220,5 +220,12 @@
     "theme": "المظهر",
     "language": "اللغة",
     "no_notifications": "ليس لديك إشعارات حتى الآن"
-  }
+  },
+  "contact":
+            {
+              "title": "كيف يمكننا مساعدتك؟",
+              "description": "هل لديك أسئلة أو تحتاج إلى مساعدة؟ نحن هنا لمساعدتك! لا تتردد في التواصل معنا للحصول على الدعم أو تقديم الملاحظات أو أي استفسارات حول Eventure. تجربتك تهمنا!",
+              "call": "اتصال",
+              "mail": "بريد إلكتروني"
+            }
 }
